# data-science-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: RepLocal2013-Ziguinchor.xlsx
notebooks/: intro_ml_python.ipynb  intro_mplt_pandas.ipynb
